fix: handle stellar-sdk update related issues: - full code refactoring and cleanup done - client only (stellar-base) imports - central management of all contract related functionalities - constants, types and utility functions implemented
Signed-off-by: tur461 <tur461.er@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS",
+      "target": "es2018",
+      "lib": ["es2018", "dom"]
     },
   },
 }
