--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -21,6 +21,7 @@
     "@statelyai/inspect": "^0.4.0",
     "@stellar/freighter-api": "^4.0.0",
     "@stellar/stellar-sdk": "^13.3.0",
+    "@tippyjs/react": "^4.2.6",
     "@xstate/store": "^2.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,6 +44,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tippy.js": "^6.3.7",
     "vscode-languageserver-protocol": "^3.17.5",
     "zustand": "^5.0.2"
   },
