feat: Add multi tab & other simple UI update

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -14,7 +14,7 @@ npm install
 
 [tasks.deps-docker]
 script = '''
-docker pull ghcr.io/hyperledger/solang@sha256:e6f687910df5dd9d4f5285aed105ae0e6bcae912db43e8955ed4d8344d49785d 
+docker pull ghcr.io/hyperledger-solang/solang:latest
 '''
 
 [tasks.deps]
@@ -111,7 +111,7 @@ dependencies = ["test-backend", "test-app", "test-frontend"]
 
 [tasks.docker-build]
 script = '''
-docker build -t solang-playground .  
+docker build -t solang-playground .
 '''
 
 [tasks.docker-run]
